BUGFIX: (IE 10) Extra spacing with nested flexbox

--- a/src/styles/layout/_sticky-footer.scss
+++ b/src/styles/layout/_sticky-footer.scss
@@ -25,4 +25,5 @@ body {
 
 main {
   flex: 1 0 auto;
+  overflow: hidden;
 }
